[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = "4.4.6"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.6"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
simple_logger = "4.2.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-icmp-echo = "0.4.1"
tokio-rustls = "0.24.1"
tracing = "0.1.37"
yaml-rust = "0.4.5"
